<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is a part of Particles live wallpaper.
 Copyright 2013 Michael Howell <michael@notriddle.com>

 Particles is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 Particles is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with Particles. If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name">Particles</string>
    <string name="number_pref">Amount of particles</string>
    <string name="velocity_pref">Average velocity</string>
    <string name="size_pref">Average size</string>
    <string name="kurt_pref">Uniformness</string>
    <string name="color_pref">Particle color</string>
    <string name="background_pref">Background color</string>
</resources>
